01-17-2019/Lab-2
>>> for i in range(1,100,9):
...     print(i)
... 
1
10
19
28
37
46
55
64
73
82
91
>>> 
>>> dict1={'a':'Raj','b':'Akbar','c':'Ali'
... \
... }
>>> dict1
{'a': 'Raj', 'b': 'Akbar', 'c': 'Ali'}
>>> 
>>> dict2={1:'Raj',2:'Akbar',3:'Ali'}
>>> dict1
{'a': 'Raj', 'b': 'Akbar', 'c': 'Ali'}
>>> dict2
{1: 'Raj', 2: 'Akbar', 3: 'Ali'}
>>> 
>>> print(dict1)
{'a': 'Raj', 'b': 'Akbar', 'c': 'Ali'}
>>> print(dict2)
{1: 'Raj', 2: 'Akbar', 3: 'Ali'}
>>> 
>>> print(dict1.keys())
dict_keys(['a', 'b', 'c'])
>>> print(dict1.values())
dict_values(['Raj', 'Akbar', 'Ali'])
>>> 
>>> for i in dict1:print(i)
... 
a
b
c
>>> 
>>> del dict1['a']
>>> dict1
{'b': 'Akbar', 'c': 'Ali'}
>>> 
>>> print('+'*20)
++++++++++++++++++++
>>> 
>>> print('*'*20)
********************
>>> 
>>> for i in dict1.values().print(i)
  File "<stdin>", line 1
    for i in dict1.values().print(i)
                                   ^
SyntaxError: invalid syntax
>>> 
>>> dict1.values()
dict_values(['Akbar', 'Ali'])
>>> 
>>> A=dict1.values()
>>> for i in A:print(i)
... 
Akbar
Ali
>>> 
>>> 

